--- a/first_question/es_master_statefulset.yaml
+++ b/first_question/es_master_statefulset.yaml
@@ -5,10 +5,11 @@ metadata:
     app : elasticsearch
     component: elasticsearch
     release: elasticsearch
+    role: master
   name: elasticsearch
 spec:
   podManagementPolicy: Parallel
-  replicas: 1
+  replicas: 3
   revisionHistoryLimit: 10
   selector:
     matchLabels:
@@ -27,7 +28,7 @@ spec:
       containers:
       - env:
         - name: cluster.name
-          value: <SET THIS>
+          value: mycluster
         - name: discovery.type
           value: single-node
         - name: ES_JAVA_OPTS
@@ -36,7 +37,7 @@ spec:
           value: "false"
         image: elasticsearch:6.5.0
         imagePullPolicy: IfNotPresent
-        name: elasticsearch
+        name: es-master
         ports:
         - containerPort: 9200
           name: http
